--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,8 @@
 .container {
   max-width: 980px;
   margin: 0 auto;
-  padding: 2rem 0;
-  min-height: 100%;
+  padding: 2rem 1rem;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
